<resources>
    <string name="app_name">find-pairs-game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_play">Play</string>
    <string name="less_time_more_reward">!less time, more reward</string>
    <string name="tutorial">keep matching up two of the same object until there are no more to be paired and you clear the board</string>
    <string name="fast">fast</string>
    <string name="congratulations">[CONGRATULATIONS!]</string>
    <string name="great_you_won">[Great! You won!]</string>
    <string name="button_double_reward">Double reward</string>
    <string name="button_play_again">Play again</string>
</resources>