<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.end_game_popup.EndGamePopupFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewCup"
        android:layout_width="196dp"
        android:layout_height="256dp"
        android:src="@drawable/cup"
        android:layout_marginTop="@dimen/_64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textSize="@dimen/_26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewCup"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/great"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/great_you_won"
        android:textSize="@dimen/_22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/congratulations"/>
    
    <TextView
        android:id="@+id/textViewBackground"
        android:layout_marginStart="@dimen/_64dp"
        android:layout_marginEnd="@dimen/_64dp"
        android:layout_marginTop="@dimen/_8dp"
        android:background="@drawable/timer_background"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_64dp"
        app:layout_constraintTop_toBottomOf="@id/great"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@id/textViewBackground"
        app:layout_constraintStart_toStartOf="@id/textViewBackground"
        app:layout_constraintEnd_toEndOf="@id/textViewBackground"
        app:layout_constraintBottom_toBottomOf="@id/textViewBackground">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewMoney"
            android:layout_width="@dimen/_32dp"
            android:layout_height="@dimen/_32dp"
            android:src="@drawable/coin"
            android:layout_marginEnd="@dimen/_8dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewReward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_22sp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDoubleReward"
        android:layout_width="@dimen/_196dp"
        android:layout_height="wrap_content"
        android:text="@string/button_double_reward"
        android:background="@drawable/button"
        android:layout_marginTop="@dimen/_8dp"
        android:padding="@dimen/_16dp"
        android:textColor="@color/white"
        android:textSize="@dimen/_22sp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/textViewBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button"
        android:layout_width="@dimen/_64dp"
        android:layout_height="@dimen/_64dp"
        android:background="@drawable/timer_background"
        android:layout_marginTop="@dimen/_8dp"
        android:src="@drawable/arrow_up"
        app:layout_constraintTop_toBottomOf="@id/textViewBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonDoubleReward"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/play_again"
        android:layout_width="@dimen/_196dp"
        android:layout_height="wrap_content"
        android:text="@string/button_play_again"
        android:background="@drawable/button"
        android:layout_marginTop="@dimen/_8dp"
        android:textSize="@dimen/_22sp"
        android:padding="@dimen/_16dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/buttonDoubleReward"
        app:layout_constraintStart_toStartOf="@id/buttonDoubleReward"/>

</androidx.constraintlayout.widget.ConstraintLayout>